[gd_scene load_steps=19 format=3 uid="uid://dps37bpe66kex"]

[ext_resource type="Script" path="res://game_duo.gd" id="1_jyc50"]
[ext_resource type="PackedScene" uid="uid://bn3d3dbdhsgkp" path="res://chicken.tscn" id="2_n8gg2"]
[ext_resource type="PackedScene" uid="uid://cxatnpyg8xf5d" path="res://player.tscn" id="4_x77j7"]
[ext_resource type="PackedScene" uid="uid://cao77m83rx5ue" path="res://farmer_player.tscn" id="5_a0v45"]
[ext_resource type="Shader" path="res://wood.gdshader" id="5_am2yr"]
[ext_resource type="Script" path="res://NumberChickensLeftLabel.gd" id="6_uvuei"]
[ext_resource type="PackedScene" uid="uid://cecgy5ts0eynj" path="res://game_main_music.tscn" id="7_86kj8"]

[sub_resource type="CylinderMesh" id="CylinderMesh_vgxbu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_npnyv"]
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="Curve3D" id="Curve3D_px41p"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 10.0749, 0, -10.1449, 0, 0, 0, 0, 0, 0, 10.0749, 0, 10.0049, 0, 0, 0, 0, 0, 0, -10.0749, 0, 10.0049, 0, 0, 0, 0, 0, 0, -10.0749, 0, -10.0749, 0, 0, 0, 0, 0, 0, 10.0749, 0, -10.1449),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_2hcuv"]

[sub_resource type="PlaneMesh" id="PlaneMesh_7q1uj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_24ueb"]
render_priority = 0
shader = ExtResource("5_am2yr")
shader_parameter/ring_scale = 4.4
shader_parameter/wave_scale = 8.454
shader_parameter/random_scale = 4.6
shader_parameter/noise_scale = 0.03

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_gpi2b"]
plane = Plane(1, 0, 0, -15)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_8vt8n"]
plane = Plane(-1, 0, 0, -15)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_eeps2"]
plane = Plane(0, 0, 1, -15)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_rvhw2"]
plane = Plane(0, 0, -1, -15)

[sub_resource type="Theme" id="Theme_yeo8b"]
default_font_size = 22

[node name="Game" type="Node3D"]
script = ExtResource("1_jyc50")
chicken_scene = ExtResource("2_n8gg2")

[node name="Player" parent="." instance=ExtResource("4_x77j7")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.42045, 0)

[node name="Cylinders" type="Node3D" parent="."]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 10)
mesh = SubResource("CylinderMesh_vgxbu")
surface_material_override/0 = SubResource("StandardMaterial3D_npnyv")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -10)
mesh = SubResource("CylinderMesh_vgxbu")
surface_material_override/0 = SubResource("StandardMaterial3D_npnyv")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -10)
mesh = SubResource("CylinderMesh_vgxbu")
surface_material_override/0 = SubResource("StandardMaterial3D_npnyv")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 10)
mesh = SubResource("CylinderMesh_vgxbu")
surface_material_override/0 = SubResource("StandardMaterial3D_npnyv")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_px41p")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 10.0749, 0, -10.1449)

[node name="WorldBoundaries" type="Node3D" parent="."]

[node name="Ground" type="StaticBody3D" parent="WorldBoundaries"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldBoundaries/Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.65157, -0.163245, -1.38668)
shape = SubResource("WorldBoundaryShape3D_2hcuv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldBoundaries/Ground"]
transform = Transform3D(15, 0, 0, 0, 1, 0, 0, 0, 15, 0, 0, 0)
mesh = SubResource("PlaneMesh_7q1uj")
surface_material_override/0 = SubResource("ShaderMaterial_24ueb")

[node name="WallX1" type="StaticBody3D" parent="WorldBoundaries"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldBoundaries/WallX1"]
shape = SubResource("WorldBoundaryShape3D_gpi2b")

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldBoundaries/WallX1"]
transform = Transform3D(-6.55671e-07, 1, 0, -15, -4.37114e-08, 0, 0, 0, 15, -15, 15, 0)
mesh = SubResource("PlaneMesh_7q1uj")
surface_material_override/0 = SubResource("ShaderMaterial_24ueb")

[node name="WallX2" type="StaticBody3D" parent="WorldBoundaries"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldBoundaries/WallX2"]
shape = SubResource("WorldBoundaryShape3D_8vt8n")

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldBoundaries/WallX2"]
transform = Transform3D(-6.55671e-07, -1, 0, 15, -4.37114e-08, 0, 0, 0, 15, 15, 15, 0)
mesh = SubResource("PlaneMesh_7q1uj")
surface_material_override/0 = SubResource("ShaderMaterial_24ueb")

[node name="WallZ1" type="StaticBody3D" parent="WorldBoundaries"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldBoundaries/WallZ1"]
shape = SubResource("WorldBoundaryShape3D_eeps2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldBoundaries/WallZ1"]
transform = Transform3D(15, 0, 0, 0, -4.37114e-08, -15, 0, 1, -6.55671e-07, 0, 15, -15)
visibility_range_end_margin = 3.0
mesh = SubResource("PlaneMesh_7q1uj")
surface_material_override/0 = SubResource("ShaderMaterial_24ueb")

[node name="WallZ2" type="StaticBody3D" parent="WorldBoundaries"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldBoundaries/WallZ2"]
shape = SubResource("WorldBoundaryShape3D_rvhw2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldBoundaries/WallZ2"]
transform = Transform3D(15, 0, 0, 0, -4.37114e-08, 15, 0, -1, -6.55671e-07, 0, 15, 15)
visibility_range_end_margin = 3.0
mesh = SubResource("PlaneMesh_7q1uj")
surface_material_override/0 = SubResource("ShaderMaterial_24ueb")

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_yeo8b")

[node name="NumberChickensLeftLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 68.0
offset_top = 39.0
offset_right = 189.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Chickens left :"
script = ExtResource("6_uvuei")

[node name="ChickenTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="FarmerTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="GameMainMusic" parent="." instance=ExtResource("7_86kj8")]

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 8, 0)
light_energy = 40.0
omni_range = 50.0
omni_attenuation = 2.29739

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, -0.5, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.936458, 0.350779, 0, -0.350779, 0.936458, 0, 4.30538, 23.2239)
size = 30.0

[node name="Farmer" parent="." instance=ExtResource("5_a0v45")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.29182, 12.5204)

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="ChickenTimer" to="." method="_on_chicken_timer_timeout"]
[connection signal="timeout" from="FarmerTimer" to="." method="_on_farmer_timer_timeout"]
